tests/NormalTests/paczka1/fuzzy1/20034339.err
Error in line 10: zrk3DWI A988 72,0
Error in line 13: JgNvQq1 A988 33,6
Error in line 17: JgNvQq1 S230 22,4
Error in line 24: xHtKefhb0B S230 53,1
Error in line 27: xHtKefhb0B A988 93,0
Error in line 34: xHtKefhb0B S836 80,4
